# vcpkg-cmake

./: .gitignore  .gitmodules  2  CMakeLists.txt  README.md  go.bat  main.cpp  vcpkg-cmake.cmake  vcpkg-packages.txt  vcpkg_cmake.cmake  vcpkg_cmake_common.cmake  vcpkg_cmake_update.cmake
attic/cmake/: check-vcpkg.cmake
cmake/: common.cmake
cmake/cmake-vcpkg/: cmake-vcpkg.cmake
src/: common.cmake  dictionary.cmake  main.cpp  public-api.cmake  update-standalone.cmake  update.cmake
test/: test-dictionary.cmake
